# internal/customer/v1/api.go
@@ -2,17 +2,17 @@ package customersv1
 
 import (
 	"context"
-	"fmt"
 
 	"github.com/luikyv/go-open-insurance/internal/api"
+	"github.com/luikyv/go-open-insurance/internal/customer"
 )
 
 type Server struct {
 	baseURL string
-	service Service
+	service customer.Service
 }
 
-func NewServer(baseURL string, service Service) Server {
+func NewServer(baseURL string, service customer.Service) Server {
 	return Server{
 		baseURL: baseURL,
 		service: service,
@@ -32,39 +32,35 @@ func (s Server) PersonalIdentificationsV1(
 	return api.PersonalIdentificationsV1200JSONResponse(resp), nil
 }
 
-type Service interface {
-	AddPersonalIdentifications(
-		sub string,
-		identifications []api.PersonalIdentificationDataV1,
-	)
-	PersonalIdentifications(sub string) []api.PersonalIdentificationDataV1
-}
-
-type service struct {
-	// personalIdentificationsMap maps users to their identifications.
-	personalIdentificationsMap map[string][]api.PersonalIdentificationDataV1
-}
-
-func NewService() Service {
-	return &service{
-		personalIdentificationsMap: map[string][]api.PersonalIdentificationDataV1{},
-	}
-}
-
-func (s *service) AddPersonalIdentifications(
-	sub string,
-	identifications []api.PersonalIdentificationDataV1,
+func (s Server) PersonalQualificationsV1(
+	ctx context.Context,
+	request api.PersonalQualificationsV1RequestObject,
+) (
+	api.PersonalQualificationsV1ResponseObject,
+	error,
 ) {
-	s.personalIdentificationsMap[sub] = identifications
+	sub := ctx.Value(api.CtxKeySubject).(string)
+	qualifications := s.service.PersonalQualifications(sub)
+	resp := newPersonalQualificationsResponse(s.baseURL, qualifications)
+	return api.PersonalQualificationsV1200JSONResponse(resp), nil
 }
 
-func (s *service) PersonalIdentifications(sub string) []api.PersonalIdentificationDataV1 {
-	return s.personalIdentificationsMap[sub]
+func (s Server) PersonalComplimentaryInfoV1(
+	ctx context.Context,
+	request api.PersonalComplimentaryInfoV1RequestObject,
+) (
+	api.PersonalComplimentaryInfoV1ResponseObject,
+	error,
+) {
+	sub := ctx.Value(api.CtxKeySubject).(string)
+	infos := s.service.PersonalComplimentaryInfos(sub)
+	resp := newPersonalComplimentaryInfoResponse(s.baseURL, infos)
+	return api.PersonalComplimentaryInfoV1200JSONResponse(resp), nil
 }
 
 func newPersonalIdentificationsResponse(
 	baseURL string,
-	identifications []api.PersonalIdentificationDataV1,
+	identifications []api.PersonalIdentificationData,
 ) api.PersonalIdentificationResponseV1 {
 	totalPages := 1
 	if len(identifications) == 0 {
@@ -73,11 +69,55 @@ func newPersonalIdentificationsResponse(
 	resp := api.PersonalIdentificationResponseV1{
 		Data: identifications,
 		Links: api.Links{
-			Self: fmt.Sprintf("%s/customers/v1/personal/identifications", baseURL),
+			Self: baseURL + "/customers/v1/personal/identifications",
 		},
 		Meta: api.Meta{
 			TotalPages:   int32(totalPages),
 			TotalRecords: int32(len(identifications)),
+		},
+	}
+
+	return resp
+}
+
+func newPersonalQualificationsResponse(
+	baseURL string,
+	qualifications []api.PersonalQualificationData,
+) api.PersonalQualificationResponseV1 {
+	totalPages := 1
+	if len(qualifications) == 0 {
+		totalPages = 0
+	}
+	resp := api.PersonalQualificationResponseV1{
+		Data: qualifications,
+		Links: api.Links{
+			Self: baseURL + "/customers/v1/personal/qualifications",
+		},
+		Meta: api.Meta{
+			TotalPages:   int32(totalPages),
+			TotalRecords: int32(len(qualifications)),
+		},
+	}
+
+	return resp
+}
+
+func newPersonalComplimentaryInfoResponse(
+	baseURL string,
+	infos []api.PersonalComplimentaryInfoData,
+) api.PersonalComplimentaryInfoResponseV1 {
+	totalPages := 1
+	if len(infos) == 0 {
+		totalPages = 0
+	}
+	resp := api.PersonalComplimentaryInfoResponseV1{
+		Data: infos,
+		Links: api.Links{
+			Self: baseURL + "/customers/v1/personal/complimentary-information",
+		},
+		Meta: api.Meta{
+			TotalPages:   int32(totalPages),
+			TotalRecords: int32(len(infos)),
 		},
 	}
 
