# oapi-spec.yml
@@ -41,6 +41,24 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/PersonalIdentificationResponseV1"
+  /customers/v1/personal/qualifications:
+    get:
+      operationId: PersonalQualificationsV1
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PersonalQualificationResponseV1"
+  /customers/v1/personal/complimentary-information:
+    get:
+      operationId: PersonalComplimentaryInfoV1
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PersonalComplimentaryInfoResponseV1"
 components:
   schemas:
     ResponseError:
@@ -522,13 +540,13 @@ components:
         data:
           type: array
           items:
-            $ref: "#/components/schemas/PersonalIdentificationDataV1"
+            $ref: "#/components/schemas/PersonalIdentificationData"
         links:
           $ref: "#/components/schemas/Links"
         meta:
           $ref: "#/components/schemas/Meta"
       additionalProperties: false
-    PersonalIdentificationDataV1:
+    PersonalIdentificationData:
       type: object
       required:
         - updateDateTime
@@ -565,19 +583,7 @@ components:
           maxLength: 11
           pattern: '^\d{11}$|^NA$'
         companyInfo:
-          type: object
-          required:
-            - name
-            - cnpjNumber
-          properties:
-            cnpjNumber:
-              type: string
-              pattern: ^\d{14}$
-              maxLength: 14
-            name:
-              type: string
-              maxLength: 70
-              pattern: '[\w\W\s]*'
+          $ref: "#/components/schemas/CompanyInfo"
         documents:
           $ref: "#/components/schemas/PersonalDocuments"
         hasBrazilianNationality:
@@ -604,37 +610,41 @@ components:
           format: date
           pattern: '^(\d{4})-(1[0-2]|0?[1-9])-(3[01]|[12][0-9]|0?[1-9])$'
         filiation:
-          type: object
-          properties:
-            type:
-              $ref: "#/components/schemas/FiliationType"
-            civilName:
-              type: string
-              maxLength: 70
-              pattern: '^[\w\W]*$'
-              example: Marcelo Cláudio Fernandes
-              description: |
-                Nome civil completo da pessoa relativa à filiação.
-                (Direito fundamental da pessoa, o nome civil é aquele atribuído à pessoa natural desde o registro de seu nascimento,
-                com o qual será identificada por toda a sua vida, bem como após a sua morte).
+          $ref: "#/components/schemas/FiliationType"
         identificationDetails:
-          type: object
-          description: Informações referente ao cônjuge.
-          properties:
-            civilName:
-              type: string
-              maxLength: 70
-              pattern: '[\w\W\s]*'
-              example: Juan Kaique Cláudio Fernandes
-              description: "Nome civil completo da pessoa natural (Direito fundamental da pessoa, o nome civil é aquele atribuído à pessoa natural desde o registro de seu nascimento, com o qual será identificada por toda a sua vida, bem como após a sua morte)"
-            cpfNumber:
-              type: string
-              maxLength: 11
-              pattern: '^\d{11}$|^NA$'
-              description: |
-                Número completo do CPF. Atributo que corresponde às informações mínimas exigidas pela Regulamentação em vigor. O CPF é o Cadastro de Pessoa natural.  Ele é um documento feito pela Receita Federal e serve para identificar os contribuintes. O CPF é uma numeração com 11 dígitos, que só mudam por decisão judicial. O documento é emitido pela receita federal
-                Condicional a seleção de true em hasBrazilianNationality
+          $ref: "#/components/schemas/IdentificationDetails"
       additionalProperties: false
+    IdentificationDetails:
+      type: object
+      description: Informações referente ao cônjuge.
+      properties:
+        civilName:
+          type: string
+          maxLength: 70
+          pattern: '[\w\W\s]*'
+          example: Juan Kaique Cláudio Fernandes
+          description: "Nome civil completo da pessoa natural (Direito fundamental da pessoa, o nome civil é aquele atribuído à pessoa natural desde o registro de seu nascimento, com o qual será identificada por toda a sua vida, bem como após a sua morte)"
+        cpfNumber:
+          type: string
+          maxLength: 11
+          pattern: '^\d{11}$|^NA$'
+          description: |
+            Número completo do CPF. Atributo que corresponde às informações mínimas exigidas pela Regulamentação em vigor. O CPF é o Cadastro de Pessoa natural.  Ele é um documento feito pela Receita Federal e serve para identificar os contribuintes. O CPF é uma numeração com 11 dígitos, que só mudam por decisão judicial. O documento é emitido pela receita federal
+            Condicional a seleção de true em hasBrazilianNationality
+    Filiation:
+      type: object
+      properties:
+        type:
+          $ref: "#/components/schemas/FiliationType"
+        civilName:
+          type: string
+          maxLength: 70
+          pattern: '^[\w\W]*$'
+          example: Marcelo Cláudio Fernandes
+          description: |
+            Nome civil completo da pessoa relativa à filiação.
+            (Direito fundamental da pessoa, o nome civil é aquele atribuído à pessoa natural desde o registro de seu nascimento,
+            com o qual será identificada por toda a sua vida, bem como após a sua morte).
     PersonalDocuments:
       type: array
       items:
@@ -916,15 +926,6 @@ components:
         - SEM_FILIACAO
       example: PAI
       description: Tipo de filiação.
-    ProcuratorsNaturePersonal:
-      type: string
-      enum:
-        - REPRESENTANTE_LEGAL
-        - PROCURADOR
-        - NAO_SE_APLICA
-      example: PROCURADOR
-      description: |
-        Natureza dos poderes vigentes de representante
     ProcuratorsNatureBusiness:
       type: string
       enum:
@@ -934,6 +935,241 @@ components:
       example: PROCURADOR
       description: |
         Natureza dos poderes vigentes de representante
+    CompanyInfo:
+      type: object
+      required:
+        - name
+        - cnpjNumber
+      properties:
+        cnpjNumber:
+          type: string
+          pattern: ^\d{14}$
+          maxLength: 14
+        name:
+          type: string
+          maxLength: 70
+          pattern: '[\w\W\s]*'
+    PersonalQualificationResponseV1:
+      required:
+        - data
+        - links
+        - meta
+      properties:
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/PersonalQualificationData"
+        links:
+          $ref: "#/components/schemas/Links"
+        meta:
+          $ref: "#/components/schemas/Meta"
+      additionalProperties: false
+    PersonalQualificationData:
+      type: object
+      required:
+        - pepIdentification
+        - updateDateTime
+        - lifePensionPlans
+      properties:
+        updateDateTime:
+          type: string
+          maxLength: 20
+          format: date-time
+          pattern: '^(\d{4})-(1[0-2]|0?[1-9])-(3[01]|[12][0-9]|0?[1-9])T(?:[01]\d|2[0123]):(?:[012345]\d):(?:[012345]\d)Z$'
+        pepIdentification:
+          $ref: "#/components/schemas/PoliticalExposure"
+        occupation:
+          type: array
+          minItems: 1
+          items:
+            $ref: "#/components/schemas/Ocupation"
+        lifePensionPlans:
+          $ref: "#/components/schemas/LifePensionPlanApplicability"
+        informedRevenue:
+          $ref: "#/components/schemas/InformedRevenue"
+        informedPatrimony:
+          $ref: "#/components/schemas/InformedPatrimony"
+      additionalProperties: false
+    InformedRevenue:
+      type: object
+      properties:
+        incomeFrequency:
+          $ref: "#/components/schemas/IncomeFrequency"
+        currency:
+          type: string
+          pattern: '^(\w{3}){1}$|^NA$'
+          maxLength: 3
+          example: BRL
+          description: "Moeda referente ao valor da renda, segundo modelo ISO-4217."
+        amount:
+          type: string
+          nullable: true
+          pattern: '^-?\d{1,15}\.\d{2,4}$'
+          example: "100000.04"
+          description: |
+            Valor do rendimento
+        date:
+          type: string
+          maxLength: 10
+          format: date
+          pattern: '^(\d{4})-(1[0-2]|0?[1-9])-(3[01]|[12][0-9]|0?[1-9])$'
+          example: "2012-05-21"
+          description: "Data de referência da renda, conforme especificação RFC-3339."
+      additionalProperties: false
+    InformedPatrimony:
+      type: object
+      properties:
+        currency:
+          type: string
+          pattern: '^(\w{3}){1}$|^NA$'
+          maxLength: 3
+          example: BRL
+          description: "Moeda referente ao valor do patrimônio, segundo modelo ISO-4217."
+        amount:
+          type: string
+          nullable: true
+          pattern: '^-?\d{1,15}\.\d{2,4}$'
+          example: "100000.04"
+          description: |
+            Valor do patrimônio
+        year:
+          type: string
+          maxLength: 4
+          format: date-fullyear
+          pattern: '^(\d{4})$'
+          example: "2010"
+          description: "Ano de referência do patrimônio, conforme especificação RFC-3339."
+      additionalProperties: false
+    LifePensionPlanApplicability:
+      type: string
+      description: Condição de proponente qualificado, aplicável à contratação de planos de previdência e vida por sobrevivência
+      enum:
+        - SIM
+        - NAO
+        - NAO_SE_APLICA
+    Ocupation:
+      type: object
+      description: Objeto agrupador de informações relativas ocupação da pessoa natural
+      properties:
+        details:
+          type: string
+          maxLength: 100
+          description: "Ocupação"
+        occupationCode:
+          type: string
+          maxLength: 100
+          example: "RECEITA_FEDERAL"
+          description: "Código da ocupação"
+        occupationCodeType:
+          $ref: "#/components/schemas/OcupationCodeType"
+        occupationCodeTypeOthers:
+          description: Descricao do tipo de codigo da ocupacao quando for informada a opcao OUTROS
+          type: string
+          maxLength: 100
+    OcupationCodeType:
+      type: string
+      example: RFB
+      enum:
+        - RFB
+        - CBO
+        - OUTROS
+      description: "Tipo de código da ocupação"
+    PoliticalExposure:
+      type: string
+      enum:
+        - NAO_EXPOSTO
+        - PESSOA_POLITICAMENTE_EXPOSTA_PPE
+        - PESSOA_PROXIMA_A_PESSOA_POLITICAMENTE_EXPOSTA_PPEE
+        - SEM_INFORMACAO
+    IncomeFrequency:
+      type: string
+      enum:
+        - DIARIA
+        - SEMANAL
+        - QUINZENAL
+        - MENSAL
+        - BIMESTRAL
+        - TRIMESTRAL
+        - SEMESTRAL
+        - ANUAL
+      example: MENSAL
+      description: Frequência da renda informada.
+    PersonalComplimentaryInfoResponseV1:
+      type: object
+      required:
+        - data
+        - links
+        - meta
+      properties:
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/PersonalComplimentaryInfoData"
+        links:
+          $ref: "#/components/schemas/Links"
+        meta:
+          $ref: "#/components/schemas/Meta"
+      additionalProperties: false
+    PersonalComplimentaryInfoData:
+      type: object
+      description: "Objeto que reúne as informações relativas ao relacionamento do cliente junto à Instituição. Considera-se relacionamento as informações que permitam conhecer desde quando a pessoa consultada é cliente da instituição, bem como um indicador dos produtos e serviços que ela consome atualmente e seus representantes"
+      required:
+        - updateDateTime
+        - productsServices
+        - startDate
+      properties:
+        updateDateTime:
+          type: string
+          format: date-time
+          maxLength: 20
+          pattern: '^(\d{4})-(1[0-2]|0?[1-9])-(3[01]|[12][0-9]|0?[1-9])T(?:[01]\d|2[0123]):(?:[012345]\d):(?:[012345]\d)Z$'
+          example: "2021-05-21T08:30:00Z"
+          description: "Data e hora da atualização do bloco de Relacionamento, conforme especificação RFC-3339, formato UTC."
+        startDate:
+          type: string
+          format: date
+          maxLength: 10
+          pattern: '^(\d{4})-(1[0-2]|0?[1-9])-(3[01]|[12][0-9]|0?[1-9])$'
+          example: "2014-05-21"
+          description: "Data mais antiga de inicio de relacionamento, considerando todos os contratos (vigentes e nao vigentes). Os contratos nao vigentes considerados devem contemplar, no minimo o periodo indicado na Tabela 22."
+        relationshipBeginning:
+          type: string
+          format: date
+          maxLength: 10
+          pattern: '^(\d{4})-(1[0-2]|0?[1-9])-(3[01]|[12][0-9]|0?[1-9])$'
+          example: "2014-05-21"
+          description: Campo deve ser preenchido com a data da apólice/contrato vigente mais antiga (caso haja contrato vigente)
+        productsServices:
+          type: array
+          minItems: 1
+          items:
+            $ref: "#/components/schemas/ProductService"
+          additionalProperties: false
+      additionalProperties: false
+    ProductService:
+      type: object
+      description: Lista de todos os contratos vigentes e não vigentes.
+      required:
+        - contract
+        - type
+      properties:
+        contract:
+          type: string
+          maxLength: 60
+          description: Lista de todos os numeros dos contratos vigentes e nao vigentes. Os contratos nao vigentes considerados devem contemplar, no minimo o periodo indicado na Tabela 22.
+        type:
+          $ref: "#/components/schemas/ProductServiceType"
+        insuranceLineCode:
+          type: string
+          maxLength: 4
+          example: "6272"
+          description: Indicar para cada contrato, caso aplicável, o código do ramo, conforme listagem de códigos definida em regulamentação específica sobre contabilização em ramos. Obs - Caso tipo de produto do contrato for “Seguros de Danos”
+        procurators:
+          type: array
+          items:
+            $ref: "#/components/schemas/PersonalProcurator"
+          minItems: 1
+          description: Lista dos representantes. De preenchimento obrigatório se houver representante.
     ProductServiceType:
       type: string
       enum:
@@ -944,6 +1180,40 @@ components:
         - SEGUROS_DE_DANOS
       example: MICROSSEGUROS
       description: Tipos de produtos.
+    PersonalProcurator:
+      type: object
+      required:
+        - nature
+      properties:
+        nature:
+          $ref: "#/components/schemas/ProcuratorsNaturePersonal"
+        cpfNumber:
+          type: string
+          maxLength: 11
+          pattern: '^\d{11}$'
+          example: "73677831148"
+          description: "(Caso Natureza dos poderes vigentes de representante for “Representante legal” ou “Procurador”) CPF do representante"
+        civilName:
+          type: string
+          maxLength: 70
+          example: Elza Milena Stefany Teixeira
+          description: "(Caso Natureza dos poderes vigentes de representante for “Representante legal” ou “Procurador”) Nome ou razão social do representante"
+        socialName:
+          type: string
+          maxLength: 70
+          pattern: '^[\w\W]*$'
+          example: "string"
+          description: "(Caso Natureza dos poderes vigentes de representante for “Representante legal” ou “Procurador”) Nome social do representante"
+      additionalProperties: false
+    ProcuratorsNaturePersonal:
+      type: string
+      enum:
+        - REPRESENTANTE_LEGAL
+        - PROCURADOR
+        - NAO_SE_APLICA
+      example: PROCURADOR
+      description: |
+        Natureza dos poderes vigentes de representante
   parameters:
     consentId:
       name: consentId
